--- a/src/components/Stats/stats.css
+++ b/src/components/Stats/stats.css
@@ -100,3 +100,16 @@
 #file-upload {
     color: transparent;
 }
+.charts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .chart {
+    width: 300px;
+    height: 300px;
+  }
+  
